--- a/src/main/resources/templates/user/usercollect.html
+++ b/src/main/resources/templates/user/usercollect.html
@@ -174,8 +174,8 @@
                     <td th:text="${collect.getCollectTimeImpl()}"></td>
                     <td th:text="${collect.getCollectFolderNameImpl()}"></td>
                     <td>
-                        <button class="btn btn-info disabled">
-                            <span class="bi-gear">操作</span>
+                        <button class="btn btn-info">
+                            <span class="bi-three-dots"> 详情</span>
                         </button>
                     </td>
                 </tr>
