2022-6-2 192458 修复管理员页跳转逻辑

--- a/src/main/resources/templates/admin/board/adminboard.html
+++ b/src/main/resources/templates/admin/board/adminboard.html
@@ -43,6 +43,24 @@
     </style>
 
 </head>
+<div class="modal fade" id="detailModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="collectModalLabel">公告详情</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div id="test-editormd">
+                    <textarea id="boardcontent" style="display:none;"></textarea>
+                </div>
+            </div>
+            <div class="modal-footer" id="collectOp">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">关闭</button>
+            </div>
+        </div>
+    </div>
+</div>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
@@ -99,15 +117,17 @@
                 <button type="button" class="list-group-item list-group-item-action"
                         onclick="window.location.href='http://localhost:8080/adm/tologinrecords'">
                     <span class="bi-person-lines-fill"></span>   登录记录</button>
-                <button type="button" class="list-group-item list-group-item-action">
-                    <span class="bi-activity"></span>   热度操作记录</button>
+                <button type="button" class="list-group-item list-group-item-action"
+                        onclick="window.location.href='http://localhost:8080/adm/mnghot'">
+                    <span class="bi-activity"></span>   热度</button>
             </div>
             <h3>其他</h3>
             <div class="list-group">
                 <button type="button" class="list-group-item list-group-item-action active"
                         onclick="window.location.href='http://localhost:8080/adm/alladminboards'">
                     <span class="bi-clipboard"></span>   公告管理</button>
-                <button type="button" class="list-group-item list-group-item-action">
+                <button type="button" class="list-group-item list-group-item-action"
+                        onclick="window.location.href='http://localhost:8080/adm/allreports'">
                     <span class="bi-emoji-frown"></span>   举报管理</button>
             </div>
         </div>
@@ -148,7 +168,10 @@
                     <td th:text="${board.getBoardthumb()}"></td>
                     <td th:text="${board.getBoardagainst()}"></td>
                     <td>
-                        <a class="btn btn-primary">操作</a>
+                        <button class="btn btn-info" data-bs-toggle="modal" data-bs-target="#detailModal"
+                                th:attr="data-content=${board.getBoardcontent()},data-title=${board.getBoardtitle()}">
+                            <span class="bi bi-three-dots"></span> 详情
+                        </button>
                     </td>
                 </tr>
                 </tbody>
@@ -181,3 +204,50 @@
 </footer>
 </body>
 </html>
+<link rel="stylesheet" th:href="@{/editormd/css/editormd.preview.css}"/>
+<script th:src="@{/js/jquery-3.5.1.js}"></script>
+<!--mark基本-->
+<script th:src="@{/editormd/lib/marked.min.js}"></script>
+<!--代码高亮-->
+<script th:src="@{/editormd/lib/prettify.min.js}"></script>
+<!--暂时不知道这个文件是干什么的，但加上这个popper就会失效-->
+<!--<script th:src="@{/editormd/lib/raphael.min.js}"></script>-->
+<script th:src="@{/editormd/lib/underscore.min.js}"></script>
+<script th:src="@{/editormd/lib/sequence-diagram.min.js}"></script>
+<script th:src="@{/editormd/lib/flowchart.min.js}"></script>
+<script th:src="@{/editormd/lib/jquery.flowchart.min.js}"></script>
+<script th:src="@{/editormd/js/editormd.min.js}"></script>
+<script>
+    var exampleModal = document.getElementById('detailModal')
+    exampleModal.addEventListener('shown.bs.modal', function (event) {
+
+        var button = event.relatedTarget
+
+        var arcontent = button.getAttribute('data-content')
+        var artitle = button.getAttribute('data-title')
+
+        // var modalBodyInput = exampleModal.querySelector('.modal-body textarea')
+        var modalBodyInput = document.getElementById('boardcontent')
+        var modaltitle = exampleModal.querySelector('.modal-title')
+
+        modalBodyInput.value = arcontent
+        modaltitle.textContent = artitle
+
+        var testEditor;
+        $(function () {
+            testEditor = editormd.markdownToHTML("test-editormd", {
+                htmlDecode: "style,script,iframe", // tags
+                emoji: true,
+                taskList: true,
+                tex: true, // 默认不解析
+                flowChart: false, // 默认不解析
+                sequenceDiagram: true, // 默认不解析
+                path: "./editormd/lib/",
+                previewTheme: "dark"
+            })
+        })
+    })
+    exampleModal.addEventListener('hide.bs.modal', function(event){
+        location.reload()
+    });
+</script>
