--- a/src/main/resources/templates/login/loginpage.html
+++ b/src/main/resources/templates/login/loginpage.html
@@ -97,6 +97,7 @@
             </form>
             <button type="button" class="btn btn-primary" @click="submitForm()"><span class="bi-person"></span> 用户登录</button>
             <button type="button" class="btn btn-danger" @click="submitAdminForm()"><span class="bi-tools"></span> 管理员登录</button>
+            <button type="button" class="btn btn-danger"><span class="bi-question-lg"></span> 我忘记了我的密码</button>
 
         </div>
     </div>
