--- a/src/main/resources/templates/admin/hot/hotmng.html
+++ b/src/main/resources/templates/admin/hot/hotmng.html
@@ -100,7 +100,7 @@
                         onclick="window.location.href='http://localhost:8080/adm/tologinrecords'">
                     <span class="bi-person-lines-fill"></span>   登录记录</button>
                 <button type="button" class="list-group-item list-group-item-action active"
-                        onclick="window.location.href='http://localhost:8080/adm/mnghot'">>
+                        onclick="window.location.href='http://localhost:8080/adm/mnghot'">
                     <span class="bi-activity"></span>   热度</button>
             </div>
             <h3>其他</h3>
@@ -108,7 +108,8 @@
                 <button type="button" class="list-group-item list-group-item-action"
                         onclick="window.location.href='http://localhost:8080/adm/alladminboards'">
                     <span class="bi-clipboard"></span>   公告管理</button>
-                <button type="button" class="list-group-item list-group-item-action">
+                <button type="button" class="list-group-item list-group-item-action"
+                        onclick="window.location.href='http://localhost:8080/adm/allreports'">
                     <span class="bi-emoji-frown"></span>   举报管理</button>
             </div>
         </div>
